--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     -->
     <title>Cowlang IDE</title>
   </head>
-  <body>
+  <body style="background-color: #292929">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
